--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+todolist.db
+TodoItem.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,eclipse,macos,maven
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse,macos,maven
